cargo-aprz-lib/src/reports/snapshots/cargo_aprz_lib__reports__snapshot_tests__csv_report.snap
---
source: cargo-aprz-lib/src/reports/mod.rs
expression: output
---
Metric,tokio v1.35.0,serde v1.0.195,anyhow v1.0.75
Appraisals,LOW RISK (score = 100, awarded points = 1, available points = 1),HIGH RISK (score = 0, awarded points = 0, available points = 1),
Reasons,✔️ high_stars,❌ low_stars,
crate.name,tokio,serde,anyhow
crate.version,1.35.0,1.0.195,1.0.75
crate.keywords,"async, runtime",serialization,"error, handling"
stability.crate_created_at,2023-01-15,2023-01-15,2023-01-15
usage.total_downloads,50000000,100000000,30000000
community.repo_stars,20000,8000,4500
trust.code_coverage_percentage,85.50,92.30,78.90
trust.ci_workflows,true,true,false
